--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-4"><strong>
                   你是否大於18歲，並想要獲取變威猛的方法？</strong>  </p></h3>
                 <p> <br> </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-2" href="https://nemsid.xyz/"><span class="mobi-mbri mobi-mbri-success mbr-iconfont mbr-iconfont-btn"></span>是的，我想要更猛</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-2" href="https://www.9puh.com/index.php?m=Order&id=yvm3&uid=1&tpl=detail"><span class="mobi-mbri mobi-mbri-success mbr-iconfont mbr-iconfont-btn"></span>是的，我想要更猛</a></div>
             </div>
         </div>
     </div>
